--- a/thems/index-b-dark.html
+++ b/thems/index-b-dark.html
@@ -3,13 +3,13 @@
   <head>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-b-dark.css">
     <title>Портфолио Junior верстальщика</title>
   </head>
 
   <body>
     <header class="page-header">
-	    <div class="container"><a class="header-email" href="mailto:roman_02_rus@mail.ru">roman_02_rus@mail.ru</a><div>Темы:</div><a href="#">BASIC-LIGHT</a><a href="thems/index-b-dark.html">BASIC-DARK</a><a href="thems/index-pro-light.html">PRO-LIGHT</a><a href="thems/index-pro-dark.html">PRO-DARK</a></div>
+	    <div class="container"><a class="header-email" href="mailto:roman_02_rus@mail.ru">roman_02_rus@mail.ru</a><div>Темы:</div><a href="../index.html">BASIC-LIGHT</a><a href="index-b-dark.html">BASIC-DARK</a><a href="index-pro-light.html">PRO-LIGHT</a><a href="index-pro-dark.html">PRO-DARK</a></div>
     </header>
 
     <section class="hero-image">
@@ -52,12 +52,12 @@
 	<div class="container">
       <h2 class="subheading">Мои работы</h2>
 		<figure class="project-image">
-			<img src="img/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+			<img src="img-b-dark/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
 		</figure>
       <h3>Сайт инструктора Кекса</h3>
 	  
       <p>Мой первый сайт.</p>
-	  <a class="button" href="thems/source/project/index.html">Открыть страницу</a><br><br>
+	  <a class="button" href="source/project/index.html">Открыть страницу</a><br><br>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
