--- a/thems/index-pro-light.html
+++ b/thems/index-pro-light.html
@@ -23,7 +23,7 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="#" height="128" alt="Фотография Балялина Романа">
+          <img src="img-pro-light/user.jpg" height="128" alt="Фотография Балялина Романа">
         </figure>
         <div>
           <h3>Пара слов о себе</h3>
