--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       </figure>
       <div>
         <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
+        <p>Junior верстальщик сайтов под заказ. Уделяю много времяни для создания сайтов.</p>
       </div>
       <div>
         <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <p>Умею работать с HTML5 и CSS3. Сделаю сайт под заказ от 5 минут.</p>
       </div>
     </div>
     
