--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div>
         <h3>Чем могу быть полезен</h3>
-        <p>Умею работать с HTML5 и CSS3. Сделаю сайт под заказ от 5 минут.</p>
+        <p>Умею работать с HTML5 и CSS3. Сделаю сайт под заказ от 5 часов.</p>
       </div>
     </div>
     
